--- a/src/main/resources/static/css/auth.css
+++ b/src/main/resources/static/css/auth.css
@@ -1,8 +1,8 @@
 /* ===== VARIABLES DE COLORES ===== */
 :root {
-    --primary: #0D5957;
+    --primary: #0d5957;
     --secondary: #F4C430;
-    --accent: #2DD4BF;
+    --accent: #000000;
     --dark: #2C3E50;
     --light: #F8F9FA;
     --white: #FFFFFF;
