--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,8 +1,8 @@
 /* ===== VARIABLES DE COLORES ===== */
 :root {
-    --primary: #0D5957;
+    --primary: #0d5957;
     --secondary: #F4C430;
-    --accent: #2DD4BF;
+    --accent: #101010;
     --dark: #2C3E50;
     --light: #F8F9FA;
     --white: #FFFFFF;
@@ -750,14 +750,7 @@ footer ul li a:hover {
     flex-wrap: wrap;
 }
 
-.header-content h1 {
-    color: var(--primary);
-    font-size: 2.5rem;
-    margin-bottom: 0.5rem;
-}
-
 .header-content p {
-    color: #666;
     font-size: 1.1rem;
 }
 
