Fix : Arreglos varios, desde mejorar la logica del admin dashboard, hasta mejorar el estilo de algunas paginas

--- a/src/main/resources/static/css/auth.css
+++ b/src/main/resources/static/css/auth.css
@@ -1,7 +1,7 @@
 /* ===== VARIABLES DE COLORES ===== */
 :root {
     --primary: #0d5957;
-    --secondary: #F4C430;
+    --secondary: #ffffff;
     --accent: #000000;
     --dark: #2C3E50;
     --light: #F8F9FA;
